--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="shortcut icon" href="/img/dekt.ico" type="image/x-icon">
     <link rel="stylesheet" href="/styles.css">
-    <title>{{title}}</title>
+    <title>MY E-COMMERCE</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-sm bg-warning">
